tests/expectations/compiler/statements/assign_external_record_fail.out
Error [ETYC0372136]: Cannot assign to the external record type `test0.aleo/R` in this location.
    --> compiler-test:12:13
     |
  12 |             r1 = test0.aleo/foo();
     |             ^^
     |
     = External record variables may not be assigned to in narrower conditional scopes than they were defined.
Error [ETYC0372137]: Cannot assign to the tuple type `(test0.aleo/R, test0.aleo/R)` containing an external record in this location.
    --> compiler-test:21:13
     |
  21 |             tupl.0 = test0.aleo/foo();
     |             ^^^^
     |
     = Tuples containing external records may not be assigned to in narrower conditional scopes than they were defined.
Error [ETYC0372137]: Cannot assign to the tuple type `(test0.aleo/R, test0.aleo/R)` containing an external record in this location.
    --> compiler-test:25:13
     |
  25 |             tupl = (test0.aleo/foo(), test0.aleo/foo());
     |             ^^^^
     |
     = Tuples containing external records may not be assigned to in narrower conditional scopes than they were defined.
Error [ETYC0372135]: Cannot assign to a member of the external record `test0.aleo/R`.
    --> compiler-test:33:9
     |
  33 |         r.x = x;
     |         ^^^
